<resources>
    <string name="Error_code_1000">Contains at least one parameter</string>
    <string name="Error_code_1001">Parameter irregularity</string>
    <string name="Error_code_1002">Parameters required</string>
    <string name="Error_code_1100">The submitted mobile phone number is not standard</string>
    <string name="Error_code_1101">The phone number is taken</string>
    <string name="Error_code_1102">The phone Numbers are different</string>
    <string name="Error_code_1103">The new phone number is not standard</string>
    <string name="Error_code_1200">Error validating code type parameter</string>
    <string name="Error_code_1230">The user already exists but has not been activated</string>
    <string name="Error_code_1231">The user name is already in use</string>
    <string name="Error_code_1232">Email address has been registered</string>
    <string name="Error_code_1233">Email address does not exist</string>
    <string name="Error_code_1234">Invalid email address</string>
    <string name="Error_code_1235">Invalid user name</string>
    <string name="Error_code_1236">Inconsistent input mailbox</string>
    <string name="Error_code_1237">Mailbox validation type does not exist</string>
    <string name="Error_code_1238">Failed to send validation message</string>
    <string name="Error_code_1239">Failed to create mail record</string>
    <string name="Error_code_1250">Request parameters incomplete</string>
    <string name="Error_code_1251">User names are not standardized</string>
    <string name="Error_code_1252">Registration information has been taken</string>
    <string name="Error_code_1301">User does not exist</string>
    <string name="Error_code_1302">The user has been banned from logging in</string>
    <string name="Error_code_1303">Incorrect user name or password</string>
    <string name="Error_code_1304">User name and password required</string>
    <string name="Error_code_1305">User token expired</string>
    <string name="Error_code_1306">User name required</string>
    <string name="Error_code_1307">User password required</string>
    <string name="Error_code_1308">User token required</string>
    <string name="Error_code_1309">User email required</string>
    <string name="Error_code_1310">User password error</string>
    <string name="Error_code_1400">The verification code has been sent</string>
    <string name="Error_code_1401">Verification code sending failed</string>
    <string name="Error_code_1402">The user already exists</string>
    <string name="Error_code_1500">Password length is not in [6, 16]</string>
    <string name="Error_code_1600">Verification code error</string>
    <string name="Error_code_1601">Verification code timeout</string>
    <string name="Error_code_1602">The number of captcha errors exceeds the limit. Please click again to send the captcha</string>
    <string name="Error_code_1603">The captcha is already in use</string>
    <string name="Error_code_1604">Invalid verification code</string>
    <string name="Error_code_1605">The invitation code does not exist</string>
    <string name="Error_code_1700">Product no. Required</string>
    <string name="Error_code_1701">The product does not exist</string>
    <string name="Error_code_1702">The product Numbers do not match</string>
    <string name="Error_code_1703">Product mismatch</string>
    <string name="Error_code_1704">Required for product identification</string>
    <string name="Error_code_1705">The product identification parameter is a list</string>
    <string name="Error_code_1706">Product key required</string>
    <string name="Error_code_1707">Product key mismatch</string>
    <string name="Error_code_1800">MAC address required</string>
    <string name="Error_code_1801">MAC address mismatch</string>
    <string name="Error_code_1900">Pass code required</string>
    <string name="Error_code_1999">Request IP exception</string>
    <string name="Error_code_2000">The type type is incorrect</string>
    <string name="Error_code_2100">The uri parameter is required</string>
    <string name="Error_code_2200">Qr codes do not exist</string>
    <string name="Error_code_2201">The qr code slug is required</string>
    <string name="Error_code_2300">Equipment no. Required</string>
    <string name="Error_code_2301">Device does not exist</string>
    <string name="Error_code_2302">The device has been bound by another user</string>
    <string name="Error_code_2303">The device slug is required</string>
    <string name="Error_code_2304">Request device firmware version parameter is not complete</string>
    <string name="Error_code_2305">The device upgrade rule does not exist</string>
    <string name="Error_code_2306">The version of the requested device upgrade pack parameter does not exist</string>
    <string name="Error_code_2307">Subdevice id required</string>
    <string name="Error_code_2308">Repeat binding</string>
    <string name="Error_code_2309">The device binding relationship does not exist</string>
    <string name="Error_code_2310">Gets a nonexistent subdevice field</string>
    <string name="Error_code_2311">Device token required</string>
    <string name="Error_code_2312">Gets a nonexistent device field</string>
    <string name="Error_code_2313">Required for device version</string>
    <string name="Error_code_2314">Subdevice name required</string>
    <string name="Error_code_2400">App slug required</string>
    <string name="Error_code_2401">The app does not exist</string>
    <string name="Error_code_2402">Request App version parameter is not complete</string>
    <string name="Error_code_2403">App upgrade rules do not exist</string>
    <string name="Error_code_2404">The version of the requested App upgrade package parameter does not exist</string>
    <string name="Error_code_2500">Cityname required</string>
    <string name="Error_code_2501">Longitude required</string>
    <string name="Error_code_2502">Latitude required</string>
    <string name="Error_code_2503">Longitude format error</string>
    <string name="Error_code_2504">Latitude format error</string>
    <string name="Error_code_2505">Latitude and longitude not supported or range error</string>
    <string name="Error_code_2509">City is invalid</string>
    <string name="Error_code_2510">Language does not support</string>
    <string name="Error_code_2511">Invalid temperature unit</string>
    <string name="Error_code_2520">Client id is required</string>
    <string name="Error_code_2600">Partner does not exist</string>
    <string name="Error_code_2700">Type mismatch</string>
    <string name="Error_code_2701">The starting value is greater than the cutoff value</string>
    <string name="Error_code_2702">The target value is greater than the cutoff value</string>
    <string name="Error_code_2703">There are rules whose scope is contained</string>
    <string name="Error_code_2704">Existence rules contain cutoff values</string>
    <string name="Error_code_2705">Existence rules contain starting values</string>
    <string name="Error_code_2706">Existence rules contain starting values</string>
    <string name="Error_code_2707">There are target values contained within the rule</string>
    <string name="Error_code_2708">Upgrade system type required</string>
    <string name="Error_code_2709">Is the upgrade required for beta</string>
    <string name="Error_code_2710">The upgrade target version slug is required</string>
    <string name="Error_code_2711">The upgrade target version does not exist</string>
    <string name="Error_code_2712">Required to upgrade the initial slug</string>
    <string name="Error_code_2713">The upgrade start template does not exist</string>
    <string name="Error_code_2714">It is required to upgrade the slug of the cut-off version</string>
    <string name="Error_code_2715">The upgrade deadline version does not exist</string>
    <string name="Error_code_2716">The beta field is required</string>
    <string name="Error_code_2800">App type required</string>
    <string name="Error_code_2900">Documents must be submitted</string>
    <string name="Error_code_3000">Time (unit: year) of installation experience must be filled in</string>
    <string name="Error_code_3001">The device owner was not found</string>
    <string name="Error_code_3002">Boiler information cannot be found</string>
    <string name="Error_code_3003">The city id is empty</string>
    <string name="Error_code_400">The parameter format is not correct</string>
    <string name="Error_code_401">Identification information not provided</string>
    <string name="Error_code_402">User cannot be found</string>
    <string name="Error_code_403">The device is bound</string>
    <string name="Error_code_404">Device not found</string>
    <string name="Error_code_405">User ID and token cannot be blank</string>
    <string name="Error_code_406">Invalid username and password</string>
    <string name="Error_code_407">Username and password cannot be blank</string>
    <string name="Error_code_408">Incomplete information</string>
    <string name="Error_code_409">Username already exists</string>
    <string name="Error_code_410">Email already exists</string>
    <string name="Error_code_411">Failed to register</string>
    <string name="Error_code_412">Failed to update</string>
    <string name="Error_code_413">User ID cannot be blank</string>
    <string name="Error_code_414">DB error</string>
    <string name="Error_code_415">Wifi box cannot be found</string>
    <string name="Error_code_416">Parameters cannot be blank</string>
    <string name="Error_code_417">Socket error</string>
    <string name="Error_code_500">WiFi box ID cannot be blank</string>
    <string name="Error_code_501">WiFi box ID has been bound with other user</string>
    <string name="add_device_bind">Bind</string>
    <string name="add_device_dev_code">Device code</string>
    <string name="add_device_enter_device_id">Please enter device ID</string>
    <string name="add_device_forgetid">Forget device s code ? &gt;&gt;&gt;</string>
    <string name="add_device_mac_address">MAC address</string>
    <string name="configure_wifi_ap_mode">AP config mode</string>
    <string name="configure_wifi_enter_key">Please confirm the phone has been connected a wireless network, then enter the Wi-Fi key. The Wi-Fi key can be kept blank if that is a open wireless network. Then click NEXT.</string>
    <string name="configure_wifi_password">Password:</string>
    <string name="configure_wifi_show_password">Show password</string>
    <string name="configure_wifi_ssid">SSID:</string>
    <string name="dialog_device_name">Device name</string>
    <string name="gateway_info_boiler_sensor">Boiler sensor</string>
    <string name="gateway_info_internet">Internet</string>
    <string name="gateway_info_mac">MAC</string>
    <string name="gateway_info_outdoor_temp_source">Outdoor temp source</string>
    <string name="gateway_info_server">Server</string>
    <string name="gateway_info_time_zone">Synchronize time</string>
    <string name="gateway_info_weather_location">Weather location</string>
    <string name="menu_about">About</string>
    <string name="menu_account">Account</string>
    <string name="menu_config_wifi">Configure Wi-Fi</string>
    <string name="menu_feedback">Feedback</string>
    <string name="menu_help">Help</string>
    <string name="public_cancel">Cancel</string>
    <string name="public_confirm">Confirm</string>
    <string name="register_email">Email</string>
    <string name="register_get_code">Get Code</string>
    <string name="register_verify_code">verify code</string>
    <string name="user_info_add_device">Add device</string>
    <string name="user_info_confirm_new_password">Confirm the new password</string>
    <string name="user_info_device_id">Device ID</string>
    <string name="user_info_new_password">New password</string>
    <string name="user_info_remove_device">Remove device</string>
</resources>