<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt">
    <group android:id="@+id/nav_grp" android:checkableBehavior="single">
        <item android:icon="@drawable/ic_menu_account" android:id="@+id/nav_account" android:title="@string/menu_account"/>
        <item android:icon="@drawable/ic_menu_help" android:id="@+id/nav_help" android:title="@string/menu_help"/>
        <item android:icon="@drawable/ic_menu_wifi" android:id="@+id/nav_wifi" android:title="@string/menu_config_wifi"/>
        <item android:icon="@drawable/ic_menu_send" android:id="@+id/nav_send" android:title="@string/menu_feedback"/>
        <item android:icon="@drawable/ic_menu_info" android:id="@+id/nav_info" android:title="@string/menu_about"/>
    </group>
</menu>
