<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:gravity="center" android:orientation="vertical" android:paddingLeft="20dp" android:paddingTop="20dp" android:paddingRight="20dp" android:paddingBottom="20dp" android:layout_width="match_parent" android:layout_height="match_parent" android:minWidth="300dp">
    <EditText android:id="@+id/et_email" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/register_email"/>
    <EditText android:textSize="15sp" android:ellipsize="end" android:id="@+id/etNewPassword" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/user_info_new_password" android:maxLines="1" android:inputType="textPassword"/>
    <EditText android:textSize="15sp" android:ellipsize="end" android:id="@+id/etConfirmNewPassword" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/user_info_confirm_new_password" android:maxLines="1" android:inputType="textPassword"/>
    <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
        <EditText android:textSize="15sp" android:ellipsize="end" android:id="@+id/et_verify_code" android:layout_width="0dp" android:layout_height="wrap_content" android:hint="@string/register_verify_code" android:maxLines="1" android:layout_weight="1" android:inputType="number"/>
        <TextView android:textColor="@color/cloudwarm_white" android:gravity="center" android:id="@+id/btn_get_verify_code" android:background="@color/ferroli_green" android:paddingLeft="10dp" android:paddingTop="8dp" android:paddingRight="10dp" android:paddingBottom="8dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:minWidth="80dp" android:text="@string/register_get_code" android:layout_alignParentEnd="true"/>
    </LinearLayout>
</LinearLayout>
