<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:id="@+id/mainLinearLayout" android:background="@color/cloudwarm_white" android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView android:textAppearance="?android:attr/textAppearanceMedium" android:textSize="@dimen/text_size_middle" android:textColor="#606060" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/add_device_enter_device_id"/>
        <EditText android:textSize="@dimen/text_size_large" android:textColor="@color/cloudwarm_grey" android:id="@+id/etGatewayName" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="30dp" android:layout_marginTop="30dp" android:layout_marginRight="30dp" android:text="" android:hint="@string/add_device_dev_code" android:singleLine="true" android:maxLength="25" android:inputType="text" android:imeOptions="actionNext"/>
        <EditText android:textSize="@dimen/text_size_large" android:textColor="@color/cloudwarm_grey" android:id="@+id/etGatewayId" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="30dp" android:layout_marginTop="30dp" android:layout_marginRight="30dp" android:text="" android:hint="@string/add_device_mac_address" android:singleLine="true" android:maxLength="12" android:inputType="text" android:imeOptions="actionDone"/>
        <TextView android:textSize="@dimen/text_size_large" android:textColor="@color/hai_dun_blue" android:id="@+id/tvAddGatewayStatus" android:visibility="visible" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="30dp" android:layout_marginTop="20dp" android:layout_marginRight="30dp" android:text="@string/add_device_forgetid"/>
    </LinearLayout>
    <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton android:textSize="@dimen/program_text_size_little" android:textColor="@color/cloudwarm_white" android:id="@+id/btAddGateway" android:paddingLeft="20dp" android:paddingTop="10dp" android:paddingRight="20dp" android:paddingBottom="10dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="30dp" android:layout_marginRight="30dp" android:layout_marginBottom="25dp" android:text="@string/add_device_bind" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" app:qmui_backgroundColor="@color/ferroli_green" app:qmui_borderColor="@color/ferroli_green" app:qmui_radius="3dp"/>
</RelativeLayout>
