<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:gravity="center_horizontal" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent">
    <ScrollView android:layout_width="match_parent" android:layout_height="match_parent" android:layout_margin="30dp" android:layout_weight="1">
        <TextView android:textSize="@dimen/text_size_middle" android:textColor="@color/cloudwarm_orange" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/configure_wifi_enter_key"/>
    </ScrollView>
    <ScrollView android:layout_width="match_parent" android:layout_height="match_parent" android:layout_weight="1">
        <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent">
            <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="30dp" android:layout_marginRight="30dp">
                <TextView android:textSize="16sp" android:textColor="@color/cloudwarm_grey" android:ellipsize="end" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/configure_wifi_ssid" android:maxLines="3" android:layout_weight="1.5"/>
                <EditText android:textSize="18sp" android:textColor="@color/cloudwarm_grey" android:id="@+id/tvSSID" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginLeft="5dp" android:layout_weight="3"/>
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="30dp" android:layout_marginTop="10dp" android:layout_marginRight="30dp">
                <TextView android:textSize="16sp" android:textColor="@color/cloudwarm_grey" android:ellipsize="end" android:layout_gravity="center" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/configure_wifi_password" android:maxLines="3" android:layout_weight="1.5"/>
                <EditText android:textSize="18sp" android:textColor="@color/cloudwarm_grey" android:id="@+id/etPassword" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="3" android:inputType="textPassword"/>
            </LinearLayout>
            <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="30dp" android:layout_marginTop="10dp" android:layout_marginRight="30dp">
                <CheckBox android:textColor="@color/cloudwarm_grey" android:id="@+id/cbShowPwd" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/configure_wifi_show_password" android:layout_weight="3"/>
            </LinearLayout>
            <CheckBox android:textColor="@color/cloudwarm_grey" android:id="@+id/cb_ap" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="30dp" android:layout_marginTop="10dp" android:text="@string/configure_wifi_ap_mode"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
