<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:gravity="left" android:orientation="vertical" android:paddingLeft="20dp" android:paddingTop="20dp" android:paddingRight="20dp" android:paddingBottom="20dp" android:layout_width="match_parent" android:layout_height="match_parent">
    <TextView android:textSize="16sp" android:textColor="@color/qmui_config_color_black" android:id="@+id/tvDeviceName" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/dialog_device_name"/>
    <EditText android:textColor="@color/cloudwarm_grey" android:gravity="center" android:id="@+id/etDeviceName" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="20dp" android:lines="1"/>
    <LinearLayout android:gravity="center" android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_20">
        <TextView android:textSize="16sp" android:textColor="@color/cloudwarm_green" android:gravity="center" android:id="@+id/tv_cancel" android:paddingTop="8dp" android:paddingBottom="8dp" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/public_cancel" android:layout_weight="1" android:layout_marginStart="16dp"/>
        <TextView android:textSize="16sp" android:textColor="@color/cloudwarm_green" android:gravity="center" android:id="@+id/tv_confirm" android:paddingTop="8dp" android:paddingBottom="8dp" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/public_confirm" android:layout_weight="1" android:layout_marginStart="16dp"/>
    </LinearLayout>
</LinearLayout>
