<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:id="@+id/mainLayout" android:layout_width="match_parent" android:layout_height="match_parent">
    <ScrollView android:layout_width="match_parent" android:layout_height="match_parent" android:layout_above="@+id/llBottom">
        <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
            <p109de.hdodenhof.circleimageview.CircleImageView android:layout_gravity="center_horizontal" android:id="@+id/civHouse" android:layout_width="150dp" android:layout_height="150dp" android:layout_marginTop="20dp" android:src="@drawable/thermostat_item" app:civ_border_color="@color/cloudwarm_orange" app:civ_border_width="0dp"/>
            <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="30dp">
                <TextView android:textColor="@color/cloudwarm_grey" android:ellipsize="middle" android:gravity="center_horizontal" android:layout_gravity="center_horizontal" android:id="@+id/tvGatewayName" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:layout_marginBottom="20dp" android:singleLine="true" android:layout_weight="1" android:layout_marginStart="20dp"/>
                <ImageView android:id="@+id/ivEditGatewayName" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/edit_2" android:layout_marginStart="20dp" android:layout_marginEnd="20dp"/>
            </LinearLayout>
            <View android:background="@color/cloudwarm_grey_lite" android:layout_width="match_parent" android:layout_height="1sp" android:layout_margin="10dp"/>
            <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
                <TextView android:textColor="@color/cloudwarm_grey" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="20dp" android:text="@string/user_info_device_id" android:layout_weight="1"/>
                <TextView android:textColor="@color/cloudwarm_grey_lite_2" android:id="@+id/tvGatewayId" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_weight="1"/>
            </LinearLayout>
            <View android:background="@color/cloudwarm_grey_lite" android:layout_width="match_parent" android:layout_height="1sp" android:layout_margin="10dp"/>
            <LinearLayout android:orientation="horizontal" android:id="@+id/llWebWeatherLocation" android:layout_width="match_parent" android:layout_height="wrap_content">
                <TextView android:textColor="@color/cloudwarm_grey" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="20dp" android:text="@string/gateway_info_weather_location" android:layout_weight="1"/>
                <TextView android:textColor="@color/cloudwarm_grey_lite_2" android:id="@+id/tvWebWeatherLocation" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_weight="1"/>
                <ImageView android:layout_width="15dp" android:layout_height="15dp" android:layout_marginLeft="20dp" android:layout_marginRight="15dp" android:src="@drawable/icon_next"/>
            </LinearLayout>
            <View android:background="@color/cloudwarm_grey_lite" android:layout_width="match_parent" android:layout_height="1sp" android:layout_margin="10dp"/>
            <LinearLayout android:orientation="horizontal" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content">
                <TextView android:textColor="@color/cloudwarm_grey" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="20dp" android:text="@string/gateway_info_outdoor_temp_source" android:layout_weight="1"/>
                <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_weight="1">
                    <RadioGroup android:id="@+id/rgOutdoorTempSource" android:layout_width="wrap_content" android:layout_height="wrap_content">
                        <RadioButton android:textColor="@color/cloudwarm_grey_lite_2" android:id="@+id/rbInternet" android:layout_width="wrap_content" android:layout_height="wrap_content" android:button="@drawable/radio" android:text="@string/gateway_info_internet"/>
                        <RadioButton android:textColor="@color/cloudwarm_grey_lite_2" android:id="@+id/rbBoilerSensor" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5dp" android:button="@drawable/radio" android:text="@string/gateway_info_boiler_sensor"/>
                    </RadioGroup>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content">
                <TextView android:textColor="@color/cloudwarm_grey" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="20dp" android:text="@string/gateway_info_mac" android:layout_weight="1"/>
                <TextView android:textColor="@color/cloudwarm_grey_lite_2" android:id="@+id/tvMAC" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_weight="1"/>
            </LinearLayout>
            <View android:background="@color/cloudwarm_grey_lite" android:visibility="gone" android:layout_width="match_parent" android:layout_height="1sp" android:layout_margin="10dp"/>
            <LinearLayout android:orientation="horizontal" android:id="@+id/llTimeZone" android:layout_width="match_parent" android:layout_height="wrap_content">
                <TextView android:textColor="@color/cloudwarm_grey" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/gateway_info_time_zone" android:layout_weight="1" android:layout_marginStart="20dp"/>
                <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_weight="1">
                    <TextView android:textColor="@color/cloudwarm_grey_lite_2" android:id="@+id/tvTimeZone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1"/>
                    <ImageView android:layout_width="15dp" android:layout_height="15dp" android:layout_marginLeft="20dp" android:layout_marginRight="15dp" android:src="@drawable/set"/>
                </LinearLayout>
            </LinearLayout>
            <View android:background="@color/cloudwarm_grey_lite" android:layout_width="match_parent" android:layout_height="1sp" android:layout_margin="10dp"/>
            <LinearLayout android:orientation="horizontal" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content">
                <TextView android:textColor="@color/cloudwarm_grey" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="20dp" android:text="@string/gateway_info_server" android:layout_weight="1"/>
                <TextView android:textColor="@color/cloudwarm_grey_lite_2" android:id="@+id/tvHost" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_weight="1"/>
            </LinearLayout>
            <View android:background="@color/cloudwarm_grey_lite" android:visibility="gone" android:layout_width="match_parent" android:layout_height="1sp" android:layout_margin="10dp"/>
        </LinearLayout>
    </ScrollView>
    <LinearLayout android:orientation="vertical" android:id="@+id/llBottom" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true">
        <View android:background="@color/cloudwarm_grey_lite" android:layout_width="match_parent" android:layout_height="1sp" android:layout_marginLeft="10dp" android:layout_marginRight="10dp"/>
        <TextView android:textColor="@color/cloudwarm_orange" android:id="@+id/tvUnbindGateway" android:padding="10dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:text="@string/user_info_remove_device"/>
        <View android:background="@color/cloudwarm_grey_lite" android:layout_width="match_parent" android:layout_height="1sp" android:layout_marginLeft="10dp" android:layout_marginRight="10dp"/>
        <TextView android:textColor="@color/cloudwarm_orange" android:id="@+id/tvBindGateway" android:padding="10dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:text="@string/user_info_add_device"/>
        <View android:background="@color/cloudwarm_grey_lite" android:layout_width="match_parent" android:layout_height="1sp" android:layout_marginLeft="10dp" android:layout_marginRight="10dp" android:layout_marginBottom="10dp"/>
    </LinearLayout>
</RelativeLayout>
